[base, collect] Safari fixes

--- a/projects/collect/src/index.html
+++ b/projects/collect/src/index.html
@@ -6,6 +6,31 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.png">
+  <script>
+    function openInBrowser(target, browserScheme) {
+      var ifc = document.createElement("div");
+      ifc.innerHTML = `<iframe src='${browserScheme}${target}' style='width:0;height:0;border:0; border:none;visibility: hidden;'></iframe>`;
+      document.body.appendChild(ifc);
+    }
+
+    function isInApp(appSpecificUserAgents) {
+      var userAgent = navigator.userAgent || navigator.vendor || window.opera;
+      for (i = 0; i <= appSpecificUserAgents.length; i++) {
+        if (userAgent.indexOf(appSpecificUserAgents[i]) > -1) return true;
+
+      }
+    }
+
+    (function tryOpenBrowser() {
+      if (document.body) {
+        if (isInApp(["FBAN", "FBAV"])) {
+          openInBrowser(window.location.href, "googlechrome://navigate?url=");
+        }
+      } else {
+        window.requestAnimationFrame(tryOpenBrowser);
+      }
+    })()
+  </script>
 </head>
 <body>
   <cs-collect-root></cs-collect-root>
