--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,35 @@
   <meta charset="utf-8">
   <title>Project Coswara</title>
   <base href="/">
-
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.png">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <script>
+    function openInBrowser(target, browserScheme) {
+      var ifc = document.createElement("div");
+      ifc.innerHTML = `<iframe src='${browserScheme}${target}' style='width:0;height:0;border:0; border:none;visibility: hidden;'></iframe>`;
+      document.body.appendChild(ifc);
+    }
+
+    function isInApp(appSpecificUserAgents) {
+      var userAgent = navigator.userAgent || navigator.vendor || window.opera;
+      for (i = 0; i <= appSpecificUserAgents.length; i++) {
+        if (userAgent.indexOf(appSpecificUserAgents[i]) > -1) return true;
+
+      }
+    }
+
+    (function tryOpenBrowser() {
+      if (document.body) {
+        if (isInApp(["FBAN", "FBAV"])) {
+          openInBrowser(window.location.href, "googlechrome://navigate?url=");
+        }
+      } else {
+        window.requestAnimationFrame(tryOpenBrowser);
+      }
+    })()
+  </script>
 </head>
 <body>
   <cs-root></cs-root>
